fix: add `py.typed` registration, fix package resources install

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -50,7 +50,7 @@ dev = [
 packages = [ "quikui" ]
 
 [tool.setuptools.package-data]
-templates = ['templates/*']
+quikui = ["py.typed", "templates/*"]
 
 [tool.setuptools_scm]
 # NOTE: Required to ensure that setuptools_scm functions properly
