--- a/.github/workflows/publish.yaml
+++ b/.github/workflows/publish.yaml
@@ -18,20 +18,7 @@ jobs:
       id-token: write
 
     steps:
-    - uses: actions/checkout@v4
-
-    - name: Set up Python
-      uses: actions/setup-python@v5
-      with:
-        python-version: "3.10"
-
-    - name: Install dependencies
-      run: |
-        python -m pip install --upgrade pip
-        pip install -e .[release]
-
-    - name: Build
-      run: python setup.py sdist bdist_wheel
-
-    - name: Publish
-      uses: pypa/gh-action-pypi-publish@release/v1
+    - uses: actions/checkout@v6
+    - uses: astral-sh/setup-uv@v7
+    - run: uv build
+    - uses: pypa/gh-action-pypi-publish@release/v1
