--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,8 +1,5 @@
 [build-system]
-requires = [
-  "setuptools>=60",
-  "setuptools_scm>=8",
-]
+requires = ["setuptools>=60", "setuptools_scm>=8"]
 build-backend = "setuptools.build_meta"
 
 [project]
@@ -29,21 +26,20 @@ dependencies = [
   "pydantic>=2.1,<3",
 ]
 
-[project.optional-dependencies]
+[dependency-groups]
 lint = [
-  "black",
+  "ruff",
+  "ty",
 ]
 test = [
   "pytest",
-]
-release = [
-  "setuptools_scm",
-  "wheel",
+  "sqlmodel",
 ]
 dev = [
   "IPython",
-  # NOTE: Must be PEP508, this ensures that `.[dev]` also installs the other extras too
-  "quikui[lint,test,release]",
+  "prek",
+  { include-group = "lint" },
+  { include-group = "test" },
 ]
 
 [tool.setuptools]
@@ -57,3 +53,27 @@ quikui = ["py.typed", "templates/*"]
 
 [tool.ruff]
 line-length = 100
+target-version = "py310"
+
+[tool.ruff.lint]
+select = [
+  "E",   # pycodestyle errors
+  "W",   # pycodestyle warnings
+  "F",   # pyflakes
+  "I",   # isort
+  "N",   # pep8-naming
+  "UP",  # pyupgrade
+  "B",   # flake8-bugbear
+  "C4",  # flake8-comprehensions
+  "PTH", # flake8-use-pathlib
+]
+ignore = [
+  "E501", # line too long (handled by formatter)
+]
+
+[tool.ruff.lint.isort]
+known-first-party = ["quikui"]
+
+[tool.ruff.format]
+quote-style = "double"
+indent-style = "space"
